--- a/manara/nodejs/expressjs/file-upload/package.json
+++ b/manara/nodejs/expressjs/file-upload/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@prisma/client": "^6.3.0",
         "@quixo3/prisma-session-store": "^3.1.13",
+        "@supabase/supabase-js": "^2.48.1",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
