chores: rebranding to Frive 🎉

--- a/manara/nodejs/expressjs/file-upload/package.json
+++ b/manara/nodejs/expressjs/file-upload/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cloudia",
+    "name": "frive",
     "version": "1.0.0",
     "description": "A Cloud Storage web app",
     "main": "app.js",
