--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "express": "^4.21.2",
         "express-session": "^1.18.1",
         "express-validator": "^7.2.1",
+        "jose": "^5.9.6",
         "method-override": "^3.0.0",
         "multer": "^1.4.5-lts.1",
         "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0"
     },
     "devDependencies": {
