--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-    "name": "frive",
-    "version": "1.0.0",
-    "description": "A Cloud Storage web app",
-    "main": "app.js",
-    "scripts": {
-        "start": "node --watch -r dotenv/config app.js"
-    },
-    "keywords": [],
-    "author": "Mostafa Ahmed",
-    "license": "MIT",
-    "dependencies": {
-        "@prisma/client": "^6.3.0",
-        "@quixo3/prisma-session-store": "^3.1.13",
-        "@supabase/supabase-js": "^2.48.1",
-        "bcrypt": "^5.1.1",
-        "dotenv": "^16.4.7",
-        "ejs": "^3.1.10",
-        "express": "^4.21.2",
-        "express-session": "^1.18.1",
-        "express-validator": "^7.2.1",
-        "jose": "^5.9.6",
-        "method-override": "^3.0.0",
-        "multer": "^1.4.5-lts.1",
-        "passport": "^0.7.0",
-        "passport-jwt": "^4.0.1",
-        "passport-local": "^1.0.0"
-    },
-    "devDependencies": {
-        "prisma": "^6.3.0"
-    }
+  "name": "frive",
+  "version": "1.0.0",
+  "description": "A Cloud Storage web app",
+  "main": "app.js",
+  "scripts": {
+    "start": "node --watch -r dotenv/config app.js"
+  },
+  "keywords": [],
+  "author": "Mostafa Ahmed",
+  "license": "MIT",
+  "dependencies": {
+    "@prisma/client": "^6.3.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
+    "@supabase/supabase-js": "^2.48.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "jose": "^5.9.6",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.3.0"
+  }
 }
